# omega

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
cmake/: omgconf.h.in
cmd/: CMakeLists.txt  getopt.c  getopt.h  omega.c
include/omega/: omega.h  omgconf.h
omega/: CMakeLists.txt  engine.c  io_util.c  io_util.h  io_util_test.cpp  memory.c  memory.h  parser.c  parser.h  parser_impl.c  parser_impl.h  parser_impl.y  parser_test.cpp  scanner.c  scanner.c.in  scanner.h  scanner.re  scanner_test.cpp  string_buf.c  string_buf.h  string_view.c  string_view.h  token.h  utility.h
tests/: CMakeLists.txt  test_aux.h
tools/: CMakeLists.txt  lemon.c  lempar.c
